--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
     <!-- Banner part start -->
     <section id="banner">
         <div class="container mx-auto">
-            <div class="banner-wrapper md:flex">
-                <div class="banner-content md:w-1/2">
+            <div class="banner-wrapper lg:flex">
+                <div class="banner-content lg:w-1/2">
                     <h1
                         class="font-manrope text-headingcolor font-extrabold text-7xl leading-[100px]  text-headingcolor">
                         It's
                         good <br>
                         tea time at The <br> Tea House</h1>
-                    <p class="font-manrope font-medium text-base leading-[30px] pr-[190px] text-paracolor py-7">Tea
+                    <p class="font-manrope font-medium text-base leading-[30px] lg:pr-[190px] text-paracolor py-7">Tea
                         and
                         Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
                     <a class="py-4 px-5 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] rounded-lg font-manrope text-lg font-bold text-white capitalize"
                         href="#">Explore More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-                <div class="banner-image md:w-1/2 relative">
+                <div class="banner-image lg:w-1/2 relative">
                     <img src="images/banner.png" alt="banner" class="w-full">
                     <div class="five-star absolute bottom-[-25px]">
                         <img src="images/5star.png" alt="5star">
@@ -65,15 +65,15 @@
         <div class="container mx-auto">
             <div class="common-header mx-auto text-center">
                 <h3 class="font-manrope font-extrabold text-4xl text-headingcolor">Our Featured Products</h3>
-                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 md:px-[195px]">
+                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 lg:px-[195px]">
                     There
                     are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                     in some form, by injected humour, or randomised words which don't look even slightly believable.
                 </p>
             </div>
-            <div class="products-wrapper md:flex g-6">
+            <div class="products-wrapper md:flex lg:gap-6 flex-wrap lg:flex-nowrap justify-center">
                 <div
-                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)] md:w-1/2 lg:w-[247px]">
                     <div class="products-image">
                         <img src="images/tea-1.png" alt="tea1" class="w-full">
                     </div>
@@ -82,7 +82,7 @@
                         replaced by fresh milk</p>
                 </div>
                 <div
-                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    class="products-item w-1/2 lg:w-[247px] p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
                     <div class="products-image">
                         <img src="images/tea-2.png" alt="tea1 " class="w-full">
                     </div>
@@ -91,7 +91,7 @@
                         replaced by fresh milk</p>
                 </div>
                 <div
-                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    class="products-item md:w-1/2 lg:w-[247px] md:mt-5 lg:mt-0 p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
                     <div class="products-image">
                         <img src="images/tea-3.png" alt="tea1" class="w-full">
                     </div>
@@ -100,7 +100,7 @@
                         replaced by fresh milk</p>
                 </div>
                 <div
-                    class="products-item p-8 rounded-[10px] bg-gradient-to-b from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    class="products-item  md:w-1/2 lg:w-[247px] md:mt-5 lg:mt-0  p-8 rounded-[10px] bg-gradient-to-b from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
                     <div class="products-image">
                         <img src="images/tea-4.png" alt="tea1" class="w-full">
                     </div>
@@ -115,8 +115,8 @@
     <!-- Great tea part started  -->
     <section id="g-tea">
         <div class="container mx-auto">
-            <div class="g-tea-wrapper md:flex justify-between gap-12 mt-40">
-                <div class="left-g-tea flex  gap-6 sm:w-full md:w-1/2">
+            <div class="g-tea-wrapper lg:flex justify-between gap-12 mt-40">
+                <div class="left-g-tea flex  gap-6 sm:w-full lg:w-1/2 justify-center">
                     <div>
                         <div
                             class="tea-items1 rounded-xl w-60 opacity-10 h-32 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] ">
@@ -138,16 +138,16 @@
                 <div class="right-g-tea ">
                     <h3 class="font-manrope font-extrabold text-4xl text-headingcolor mb-4">Great Tea, Freshly
                         Presented</h3>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  md:pr-[161px] mb-6">The
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  lg:pr-[161px] mb-6">The
                         meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
                         It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
                         deeply appreciated by its custoers because of good words of mouth and unique customized service
                         orginated from Taiwan.</p>
                     <h4 class="font-manrope font-extrabold text-xl text-headingcolor">Unique Taste</h4>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  md:pr-[266px]">A Unique
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  lg:pr-[266px]">A Unique
                         and different style from other teapots gives a luxurious and minimalist impression</p>
                     <h4 class="font-manrope font-extrabold text-xl text-headingcolor ">Premium Quality</h4>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  md:pr-[266px]">Premium
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  lg:pr-[266px]">Premium
                         Quality that makes tea more elegant and more durable when you use it.</p>
                 </div>
             </div>
@@ -158,11 +158,11 @@
     <section id="comment">
         <div class="container mx-auto">
             <div class="comment-item py-20 px-16 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] items-center ">
-                <div class="comment-wrapper  md:flex">
+                <div class="comment-wrapper  lg:flex">
                     <div class="comment-content">
-                        <h2 class="font-manrope font-extrabold text-[45px] text-[#F4F4F4] md:pr-[279px]">Meet Our Super
+                        <h2 class="font-manrope font-extrabold text-[45px] text-[#F4F4F4] lg:pr-[279px]">Meet Our Super
                             Clients</h2>
-                        <p class="font-manrope font-medium text-base leading-[28px]  text-[#777]  md:pr-[390px] mb-7">
+                        <p class="font-manrope font-medium text-base leading-[28px]  text-[#777]  lg:pr-[390px] mb-7">
                             There
                             are many variations of passages of Lorem Ipsum available, but the majority have suffered
                             alteration in some form, by injected humour, or randomised words which don't look even
@@ -185,7 +185,7 @@
                             </div>
                         </div>
                         <div
-                            class="comments mt-[-75px] pt-10  pb-8 pl-12 bg-white rounded-lg relative top-[-20px] md:left-[-120px]">
+                            class="comments mt-[-75px] pt-10  pb-8 pl-12 bg-white rounded-lg relative top-[-20px] lg:left-[-120px]">
                             <p class="font-[manrope] font-normal text-base leading-[28px]  text-[#777] ">We are
                                 providing the best and suitable home insurance services for the people who are
                                 interested to treatment</p>
@@ -218,13 +218,13 @@
         <div class="container mx-auto">
             <div class="common-header mt-[130px] text-center">
                 <h3 class="font-[manrope] font-extrabold text-4xl text-headingcolor">News & Events</h3>
-                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 md:px-[195px]">
+                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 lg:px-[195px]">
                     There
                     are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                     in some form, by injected humour, or randomised words which don't look even slightly believable.
                 </p>
             </div>
-            <div class="news-wrapper  md:flex justify-center gap-6">
+            <div class="news-wrapper  lg:flex justify-center gap-6">
                 <div class="news-item p-5 flex justify-center border-2 rounded-lg border-[#D2D2D2]">
                     <div>
                         <div class="news-image rounded-lg ">
@@ -242,7 +242,7 @@
                     </div>
                 </div>
                 <div
-                    class="news-item p-5 flex justify-center sm:mt-5 sm:mb-5 md:mt-0 md:mb-0  border-2 rounded-lg border-[#D2D2D2]">
+                    class="news-item p-5 flex justify-center sm:mt-5 sm:mb-5  lg:mt-0 lg:mb-0  border-2 rounded-lg border-[#D2D2D2]">
                     <div>
                         <div class="news-image rounded-lg">
                             <img src="images/news-2.png" alt="news-1">
