--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
                 <div class="right-g-tea ">
                     <h3 class="font-manrope font-extrabold text-4xl text-headingcolor mb-4">Great Tea, Freshly
                         Presented</h3>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  lg:pr-[161px] mb-6">The
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  xl:pr-[161px] mb-6">The
                         meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
                         It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
                         deeply appreciated by its custoers because of good words of mouth and unique customized service
                         orginated from Taiwan.</p>
                     <h4 class="font-manrope font-extrabold text-xl text-headingcolor">Unique Taste</h4>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  lg:pr-[266px]">A Unique
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  xl:pr-[266px]">A Unique
                         and different style from other teapots gives a luxurious and minimalist impression</p>
                     <h4 class="font-manrope font-extrabold text-xl text-headingcolor ">Premium Quality</h4>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  lg:pr-[266px]">Premium
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  xl:pr-[266px]">Premium
                         Quality that makes tea more elegant and more durable when you use it.</p>
                 </div>
             </div>
