--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
     <!-- comments part started -->
     <section id="comment">
         <div class="container mx-auto">
-            <div class="comment-item py-20 px-16 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] items-center ">
+            <div
+                class="comment-item rounded-xl py-20 px-16 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] items-center ">
                 <div class="comment-wrapper  lg:flex">
                     <div class="comment-content">
                         <h2 class="font-manrope font-extrabold text-[45px] text-[#F4F4F4] lg:pr-[279px]">Meet Our Super
@@ -330,7 +331,12 @@
                                     <br> newsletter</a></li>
                         </ul>
                         <div class="social-media">
-                            <h6 class="font-[jakarta] font-medium text-base text-[#494949] mt-[30px]">Email addres</h6>
+                            <h6 class="font-[jakarta] inline-block font-medium text-base text-[#494949] mt-[30px]">Email
+                                addres</h6>
+                            <div class="icons inline-block ml-40">
+                                <i
+                                    class="fa-solid fa-chevron-right w-8 h-8 rounded-[50%] flex justify-center items-center bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] text-white"></i>
+                            </div>
                             <hr class="w-305px text-[#494949] mt-[23px] mb-[45px]">
                             <i class="fa-brands fa-facebook-f text-[#494949] text-lg mr-[20px]"></i>
                             <i class="fa-brands fa-twitter  text-[#494949] text-lg mr-[20px]"></i>
