another part added

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- Great tea part started  -->
     <section id="g-tea">
         <div class="container mx-auto">
-            <div class="g-tea-wrapper lg:flex justify-between gap-12 mt-40">
+            <div class="g-tea-wrapper lg:flex justify-between gap-12 mt-40 ">
                 <div class="left-g-tea flex  gap-6 sm:w-full lg:w-1/2 justify-center">
                     <div>
                         <div
@@ -155,10 +155,11 @@
     </section>
     <!-- Great tea part Ended -->
     <!-- comments part started -->
-    <section id="comment">
+    <section>
+       <div class="comments-section mt-32">
         <div class="container mx-auto">
             <div
-                class="comment-item rounded-xl py-20 px-16 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] items-center ">
+                class="comment-item  rounded-xl py-20 px-16 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] items-center ">
                 <div class="comment-wrapper  lg:flex">
                     <div class="comment-content">
                         <h2 class="font-manrope font-extrabold text-[45px] text-[#F4F4F4] lg:pr-[279px]">Meet Our Super
@@ -212,6 +213,7 @@
                 </div>
             </div>
         </div>
+       </div>
     </section>
     <!-- comments part Ended -->
     <!-- news events part started -->
